--- a/static/swagger/apidocs_index.html
+++ b/static/swagger/apidocs_index.html
@@ -1,58 +1,53 @@
 <!-- HTML for static distribution bundle build -->
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Swagger UI | COPO</title>
-    <link rel="stylesheet" type="text/css" href="swagger-ui.css">
-    <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32"/>
-    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16"/>
+    <link rel="stylesheet" type="text/css" href="swagger-ui.css" />
+    <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
     <style>
-        html {
-            box-sizing: border-box;
-            overflow: -moz-scrollbars-vertical;
-            overflow-y: scroll;
-        }
+      html {
+        box-sizing: border-box;
+        overflow: -moz-scrollbars-vertical;
+        overflow-y: scroll;
+      }
 
-        *,
-        *:before,
-        *:after {
-            box-sizing: inherit;
-        }
+      *,
+      *:before,
+      *:after {
+        box-sizing: inherit;
+      }
 
-        body {
-            margin: 0;
-            background: #fafafa;
-        }
+      body {
+        margin: 0;
+        background: #fafafa;
+      }
     </style>
-</head>
+  </head>
 
-<body>
-<div id="swagger-ui"></div>
+  <body>
+    <div id="swagger-ui"></div>
 
-<script src="swagger-ui-bundle.js" charset="UTF-8"></script>
-<script src="swagger-ui-standalone-preset.js" charset="UTF-8"></script>
-<script>
-    window.onload = function () {
+    <script src="swagger-ui-bundle.js" charset="UTF-8"></script>
+    <script src="swagger-ui-standalone-preset.js" charset="UTF-8"></script>
+    <script>
+      window.onload = function () {
         // Begin Swagger UI call region
         const ui = SwaggerUIBundle({
-            url: "openapi_copo_dtol.yml",
-            dom_id: '#swagger-ui', defaultModelsExpandDepth: -1,
-            deepLinking: true,
-            presets: [
-                SwaggerUIBundle.presets.apis,
-                SwaggerUIStandalonePreset
-            ],
-            plugins: [
-                SwaggerUIBundle.plugins.DownloadUrl
-            ],
-            layout: "StandaloneLayout"
-        })
-
+          url: 'openapi_copo_dtol.yml',
+          dom_id: '#swagger-ui',
+          defaultModelsExpandDepth: -1,
+          deepLinking: true,
+          presets: [SwaggerUIBundle.presets.apis, SwaggerUIStandalonePreset],
+          plugins: [SwaggerUIBundle.plugins.DownloadUrl],
+          layout: 'StandaloneLayout',
+        });
         // End Swagger UI call region
 
-        window.ui = ui
-    }
-</script>
-</body>
+        window.ui = ui;
+      };
+    </script>
+  </body>
 </html>
