Improve accessibility: Add signposting and screen reader support
- Added accessible names to buttons, links, and menu items using aria-labels and visible text
- Associated <select> elements with corresponding <label> tags
- Added meta description to several pages
- Improved overall semantic structure for better screen reader navigation
- Ensured key components are properly labelled and announced
- Localised third party CSS and JS assets
- Helps meet WCAG standards and improves UX for assistive technology users

--- a/static/copo/jQuery-File-Upload-master/cors/result.html
+++ b/static/copo/jQuery-File-Upload-master/cors/result.html
@@ -14,6 +14,8 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
+<meta name="author" content="Sebastian Tschan">
+<meta name="description" content="jQuery Iframe Transport Plugin Redirect Page">
 <title>jQuery Iframe Transport Plugin Redirect Page</title>
 </head>
 <body>
