--- a/static/copo/lou-multi-select-e052211/samples/index.html
+++ b/static/copo/lou-multi-select-e052211/samples/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-        <meta name="author" content="">
+    <meta name="author" content="COPO project team, based on Louis Cuny's multi-select plugin">
+    <meta name="description" content="A Demo web page using the jQuery multi-select plugin">
     <title>Title Page</title>
     <!-- Bootstrap CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
