--- a/static/swagger/apidocs_index.html
+++ b/static/swagger/apidocs_index.html
@@ -2,7 +2,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="author" content="COPO project team based on Swagger UI">
+    <meta name="description" content="Swagger UI for COPO API">
+    
     <title>Swagger UI | COPO</title>
     <link rel="stylesheet" type="text/css" href="swagger-ui.css" />
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
