--- a/static/copo/jQuery-File-Upload-master/cors/postmessage.html
+++ b/static/copo/jQuery-File-Upload-master/cors/postmessage.html
@@ -14,6 +14,8 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
+<meta name="author" content="Sebastian Tschan">
+<meta name="description" content="jQuery File Upload Plugin postMessage API">
 <title>jQuery File Upload Plugin postMessage API</title>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 </head>
