Removed obsolete API method regarding project (study) accessions

--- a/static/swagger/apidocs_index.html
+++ b/static/swagger/apidocs_index.html
@@ -40,7 +40,7 @@
       window.onload = function () {
         // Begin Swagger UI call region
         const ui = SwaggerUIBundle({
-          url: 'openapi_copo_dtol.yml',
+          url: 'openapi_copo.yml',
           dom_id: '#swagger-ui',
           defaultModelsExpandDepth: -1,
           deepLinking: true,
